edit  grid-gap button price

--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -50,6 +50,10 @@ main {
                 &:hover {
                     background-color: $primary-hover;
                 }
+
+                a {
+                    color: $text-color;
+                }
             }
 
 
