--- a/scss/layout/_testimonial.scss
+++ b/scss/layout/_testimonial.scss
@@ -30,6 +30,7 @@
             img {
                 width: 60px;
                 height: 60px;
+                object-fit: cover;
                 border-radius: 50%;
 
             }
