--- a/scss/layout/_user.scss
+++ b/scss/layout/_user.scss
@@ -9,8 +9,8 @@
         position: relative;
         background-color: $background-color;
         width: 90%;
-        max-width: 500px;
-        height: 500px;
+        max-width: 300px;
+        height: 80%;
         border-radius: 10px;
         display: flex;
         justify-content: center;
