--- a/scss/main.css
+++ b/scss/main.css
@@ -289,8 +289,8 @@ nav .nav-box .nav-icon #bars-icon {
   position: relative;
   background-color: #fff;
   width: 90%;
-  max-width: 500px;
-  height: 500px;
+  max-width: 300px;
+  height: 80%;
   border-radius: 10px;
   display: flex;
   justify-content: center;
