--- a/scss/layout/_viewCart.scss
+++ b/scss/layout/_viewCart.scss
@@ -73,9 +73,7 @@
                 font-size: 1.3rem;
                 font-weight: 600;
                 display: flex;
-                justify-content: space-between;
-                gap: 1rem;
-
+                justify-content: space-around;
 
                 .view-price {
 
