--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -90,7 +90,7 @@ nav {
                 top: -200%;
                 left: 0;
                 width: 100%;
-                height: 100vh;
+                min-height: 100%;
                 padding-top: 60px;
                 background-color: $background-modal;
                 backdrop-filter: blur(10px);
