--- a/scss/main.css
+++ b/scss/main.css
@@ -183,10 +183,10 @@ nav .nav-box .nav-icon #bars-icon {
     flex-direction: column;
     align-items: center;
     position: fixed;
-    top: -100%;
+    top: -200%;
     left: 0;
     width: 100%;
-    height: 100vh;
+    min-height: 100%;
     padding-top: 60px;
     background-color: rgba(0, 0, 0, 0.5);
     -webkit-backdrop-filter: blur(10px);
