--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 @import './layout/navbar';
 @import'./layout/search';
 @import'./layout/user';
+@import'./layout/cart-item';
 @import'./layout/viewCart';
 @import'./layout/home';
 @import'./layout/feature';
