--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -75,7 +75,7 @@ nav {
                     color: $primary-hover;
                 }
 
-                #count {
+                #nav-count {
                     position: absolute;
                     top: -10px;
                     right: -10px;
