--- a/scss/layout/_cart-item.scss
+++ b/scss/layout/_cart-item.scss
@@ -122,6 +122,7 @@
         }
 
         .sub-total-box {
+            font-size: $font-defult;
             display: flex;
             gap: 1rem;
             justify-content: end;
