--- a/scss/main.css
+++ b/scss/main.css
@@ -441,6 +441,7 @@ nav .nav-box .nav-icon #bars-icon {
   color: #f77f00;
 }
 .cart-item-modal .cart-item-box .sub-total-box {
+  font-size: clamp(12px, 2vw, 16px);
   display: flex;
   gap: 1rem;
   justify-content: end;
